$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Vegan 2.1-10 (opened January 22, 2012)

	* mantel, mantel.partial: implemented parallel processing.

	* varpart: do not scale constraints to unit sd -- this makes
	constant columns (like all zero) into NaN and causes an error in
	simpleRDA2.  Not scaling may help in problems like that reported
	in "[vegan-help][5477] Nested factors in function "varpart"?" by
	Katie Shelef on 26 Jan 2012
	
Version 2.1-9 (closed January 22, 2012)

	* public launch of parallel processing in vegan. First step was to
	explain the implementation in decision-vegan.Rnw. 

	* DESCRIPTION: vegan suggests 'parallel'. The 'parallel' package
	was released with R 2.14.0. If you need to check or use vegan with
	older R, you should set environmental variable
	_R_CHECK_FORCE_SUGGESTS_=FALSE (see, e.g., discussion
	https://stat.ethz.ch/pipermail/r-devel/2011-December/062827.html).

	* oecosimu, permutest.cca: new parallel block which honours
	setDefaultCluster() in R-devel (becoming R 2.15.0) and
	automatically uses parallel processing with socket clusters if
	setDefaultCluster was defined. Tested in R (unstable) (2012-01-16
	r58122) with full features, in R 2.14.1 without setDefaultCluster,
	and in R 2.13.1 (2011-07-08) without parallel processing

	* anova.ccabymargin failed if none of the terms was analysed (all
	were aliased) and no permutations were performed.  This would
	happen with, e.g.,
	
	A <- dune.env$Management
	anova(rda(dune ~  Management + A, dune.env), by = "margin")

	or in general if all marginal effects were aliased. 

	* capscale: plotting failed for mod <- capscale(dune ~
	Condition(Management) + A1, dune.env). The centroids for
	Management were completely removed leaving a zero-row matrix of
	centroids, and this caused an error in plot() and would probably
	fail elsewhere.  The same problem can appear with completely
	aliased classes, or when class centroids are nearly zero.
